fix: added update flight service records.
